--- a/assets/sass/_landing.scss
+++ b/assets/sass/_landing.scss
@@ -372,7 +372,7 @@
                 }
             }
         }
-        &:hover {
+        &:hover, &:active, &:focus {
             .img-holder {
                 opacity: 0.2;
                 @include transition (all,
